# hltv-parser

./: .envrc
deploy/: bootstrap.sh  deploy.sh
nginx/: Dockerfile
nginx/etc/nginx/: nginx.conf
web/: .dockerignore  Dockerfile  Procfile  manage.py  pyproject.toml
web/assets/: package.json  webpack.config.js
web/assets/src/: index.js
web/assets/src/styles/: index.scss
web/hltv_parser/: __init__.py  admin.py  urls.py  views.py  wsgi.py
web/hltv_parser/management/commands/: parse_hltv.py
web/hltv_parser/migrations/: 0001_initial.py
web/hltv_parser/models/: __init__.py  map.py  match.py  match_map.py  match_veto.py  team.py  tournament.py
web/hltv_parser/settings/: base.py
web/hltv_parser/templates/: base.html  diagram_statistic.html  index.html  statistic_table.html  team_profile.html
