[build-system]
requires = ["poetry-core>=1,<2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hltv-parser"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-extensions = "^3.1"
jinja2 = "^3.0"
psycopg2 = "^2.8"
uWSGI = "^2.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"
honcho = "^1.0"
